# The purpose of this script is to fully test the sorting panel and all sorting combinations
# by identifying the order of the test services.
#
# Sorting Schema:
# none   = alpha, zetta, omega
# name   = alpha, omega, zetta
# repair = zetta, omega, alpha
# due    = omega, alpha, zetta
appId: com.ivangarzab.carrus.debug
---
- runFlow: # make sure there's car data
    when:
      visible:
        text: "ADD NEW CAR"
    file: "flow_creation_quick.yaml"
- runFlow: # make sure we're in the Overview screen
    when:
      notVisible:
        text: "Services"
    commands:
        - tapOn: "Home"
- runFlow: # make sure there's service list data
    when:
      visible:
        text: "No services scheduled at this time"
    file: "flow_service_list_create_quick.yaml"
- "scroll"
- assertVisible: "Service sort icon button"
- tapOn: "Service sort icon button"
- assertVisible: "none"
- assertVisible: "name"
- assertVisible: "repair date"
- assertVisible: "due date"
- assertVisible:
    id: "Service alpha index 0"
- assertVisible:
    id: "Service zetta index 1"
- assertVisible:
    id: "Service omega index 2"
- tapOn: "name"
- assertVisible:
    id: "Service alpha index 0"
- assertVisible:
    id: "Service omega index 1"
- assertVisible:
    id: "Service zetta index 2"
- tapOn: "repair date"
- assertVisible:
    id: "Service zetta index 0"
- assertVisible:
    id: "Service omega index 1"
- assertVisible:
    id: "Service alpha index 2"
- tapOn: "due date"
- assertVisible:
    id: "Service omega index 0"
- assertVisible:
    id: "Service alpha index 1"
- assertVisible:
    id: "Service zetta index 2"
